green-config/green-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: green
  namespace: deploy-test
spec:
  clusterIP: 172.30.110.80
  clusterIPs:
  - 172.30.110.80
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: green
  sessionAffinity: None
  type: ClusterIP
