green-config/green-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: green
  namespace: deploy-test
spec:
  host: green.apps.poc.amc
  port:
    targetPort: 8080
  to:
    kind: Service
    name: green
    weight: 100
  wildcardPolicy: None
